fix: correct timeframe config and ensure HTF data is downloaded

--- a/.github/workflows/backtest.yml
+++ b/.github/workflows/backtest.yml
@@ -37,8 +37,7 @@ jobs:
       - name: Download data
         run: |
           freqtrade download-data \
-            --exchange okx \
-            --pairs BTC/USDT ETH/USDT \
+            --config config/backtest.json \
             --timeframes 5m 15m
 
       # ===== 跑回测 =====
