--- a/.github/workflows/backtest.yml
+++ b/.github/workflows/backtest.yml
@@ -48,3 +48,38 @@ jobs:
             --strategy OneFiveTrendHTF \
             --export trades \
             --export-filename result.json
+
+      - name: Install jq
+        run: sudo apt-get install -y jq
+
+      - name: Build PR comment body
+        run: |
+          RESULT="user_data/backtest_results/result.json"
+          PROFIT=$(jq -r '.strategy_comparison[0].profit_total_pct' $RESULT)
+          WINRATE=$(jq -r '.strategy_comparison[0].winrate' $RESULT)
+          TRADES=$(jq -r '.strategy_comparison[0].trades' $RESULT)
+          DRAWDOWN=$(jq -r '.strategy_comparison[0].max_drawdown_account' $RESULT)
+          START=$(jq -r '.strategy_comparison[0].backtest_start' $RESULT)
+          END=$(jq -r '.strategy_comparison[0].backtest_end' $RESULT)
+
+          cat <<EOF > comment.md
+          🤖 **Freqtrade Backtest Result – OneFiveTrendHTF**
+
+          - 📅 Period: $START → $END
+          - 💰 Total Profit: **${PROFIT}%**
+          - 📈 Winrate: **${WINRATE}%**
+          - 🔁 Trades: **$TRADES**
+          - 📉 Max Drawdown: **${DRAWDOWN}%**
+          EOF
+
+      - name: Comment PR
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: fs.readFileSync('comment.md', 'utf8')
+      });
