--- a/.github/workflows/backtest.yml
+++ b/.github/workflows/backtest.yml
@@ -52,7 +52,7 @@ jobs:
           freqtrade backtesting \
             --config config/backtest.json \
             --strategy OneFiveTrendHTF \
-            --export trades \
+            --export backtest \
             --export-filename user_data/backtest_results/result.json
 
       - name: Build PR comment body
