--- a/.github/workflows/backtest.yml
+++ b/.github/workflows/backtest.yml
@@ -44,14 +44,14 @@ jobs:
         run: |
           freqtrade download-data \
             --config config/backtest.json \
-            --timeframes 5m 15m
+            --timeframes 1m
 
       - name: Run backtest
         run: |
           mkdir -p user_data/backtest_results
           freqtrade backtesting \
             --config config/backtest.json \
-            --strategy OneFiveTrendHTF \
+            --strategy TriangularArbitrageOKX \
             --backtest-directory user_data/backtest_results \
             --backtest-filename result.json
 
