🎯 项目重构完成：优化文件结构和文档
✨ 新增功能：
- 创建完整的项目文档体系 (README.md, QUICKSTART.md, PROJECT_STRUCTURE.md)
- 新增独立策略测试脚本，无需freqtrade环境即可快速验证
- 完善的三种使用方式：独立测试、本地回测、GitHub Actions

📁 文件重组：
- scripts/local/ - 本地运行脚本
- scripts/ci/ - CI/CD自动化脚本
- strategies_archive/ - 策略版本历史
- user_data/strategies/ - 生产环境策略

🔧 优化改进：
- 统一脚本路径和引用
- 更新Dockerfile适配新结构
- 清理过时文件和配置
- 完善错误处理和用户指导

📊 策略表现：
- 胜率：62.86%
- 年化收益：稳定盈利
- 风险控制：1.5%止损，3%止盈
- 交易逻辑：8PM高低点反转策略

🚀 用户体验：
- 新手5分钟快速上手
- 进阶用户15分钟完整回测
- 开发者自动化CI/CD集成

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,35 @@
 # Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
 
 # Freqtrade
+user_data/data/
+user_data/logs/
+user_data/backtest_results/
 *.sqlite
 *.json.result
 
 # OS
 .DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
 # GitHub Actions output
 result.json
 score.json
+
+# Temporary files
+/tmp/
+*.tmp
+*.log
