🔧 更新GitHub Actions工作流支持期货交易对
✅ 修复问题：
- 更新数据下载命令使用期货交易对格式
- ETH/USDT  ETH/USDT:USDT
- BTC/USDT  BTC/USDT:USDT

📊 工作流更新：
- backtest.yml: 自动回测工作流
- manual-backtest.yml: 手动回测工作流
- 统一使用期货合约格式

🎯 数据兼容性：
- 确保下载正确的期货数据
- 匹配配置文件中的交易对格式
- 支持完整的回测流程

🧪 验证：
- 数据下载与配置文件一致
- 支持期货模式回测
- 保持所有回测功能

--- a/.github/workflows/backtest.yml
+++ b/.github/workflows/backtest.yml
@@ -48,7 +48,7 @@ jobs:
           freqtrade download-data \
             --config config/eightpm_backtest.json \
             --timeframes 1h \
-            --pairs ETH/USDT BTC/USDT \
+            --pairs ETH/USDT:USDT BTC/USDT:USDT \
             --days 180
 
       - name: Run backtest
