同步更新GitHub Actions工作流 - 支持v2.3多币种回测
🔄 GitHub Actions更新:

1️⃣ 自动回测工作流 (backtest.yml):
- 新增交易对下载: SOL/USDT, ADA/USDT, MATIC/USDT
- 更新回测报告模板，展示v2.3收益率优化策略
- 增加多币种性能对比表格
- 优化报告格式，突出收益率提升重点

2️⃣ 手动回测工作流 (manual-backtest.yml):
- 默认交易对扩展至5个币种
- 支持用户自定义多币种组合测试

3️⃣ 报告优化:
- 展示v2.3 vs v2.2.1性能对比
- 突出收益率优化的四大策略
- 详细说明动态仓位管理机制
- 增加策略特色和风险控制说明

🎯 确保CI/CD流程完整支持v2.3多币种收益率优化策略

--- a/.github/workflows/manual-backtest.yml
+++ b/.github/workflows/manual-backtest.yml
@@ -14,7 +14,7 @@ on:
       pairs:
         description: 'Trading pairs (comma separated)'
         required: true
-        default: 'ETH/USDT:USDT,BTC/USDT:USDT'
+        default: 'ETH/USDT:USDT,BTC/USDT:USDT,SOL/USDT:USDT,ADA/USDT:USDT,MATIC/USDT:USDT'
 
 jobs:
   manual-backtest:
