同步GitHub Actions - 支持v2.5混合优化策略
🔄 GitHub Actions v2.5同步更新:

1️⃣ 币种配置精简:
- 保留: ETH/USDT, ADA/USDT, AVAX/USDT (3个精选)
- 移除: DOT/USDT, LINK/USDT (基于v2.4表现)

2️⃣ 回测报告升级:
- 展示v2.5混合平衡优化策略
- 详细说明基于v2.4数据的精准调整
- 版本演进对比表 (v2.3v2.4v2.5)
- 突出质量胜过数量的币种选择策略

3️⃣ 报告内容优化:
- ADA最佳表现说明 (66.7%胜率, 0.13%收益)
- ETH需要恢复说明 (从70%降至57.1%胜率)
- AVAX适度配置说明 (55%胜率, 0.04%收益)
- 参数平衡点解释 (v2.3和v2.4之间)

4️⃣ 目标设定:
- 胜率目标: 65%+ (在v2.3和v2.4之间)
- 收益率目标: 0.25%+ (稳健提升)
- 交易频率: 50-60笔 (平衡质量和数量)

🎯 确保CI/CD完整支持v2.5数据驱动的混合优化策略

--- a/.github/workflows/manual-backtest.yml
+++ b/.github/workflows/manual-backtest.yml
@@ -14,7 +14,7 @@ on:
       pairs:
         description: 'Trading pairs (comma separated)'
         required: true
-        default: 'ETH/USDT:USDT,ADA/USDT:USDT,AVAX/USDT:USDT,DOT/USDT:USDT,LINK/USDT:USDT'
+        default: 'ETH/USDT:USDT,ADA/USDT:USDT,AVAX/USDT:USDT'
 
 jobs:
   manual-backtest:
