--- a/.github/workflows/manual-backtest.yml
+++ b/.github/workflows/manual-backtest.yml
@@ -6,11 +6,11 @@ on:
       timerange:
         description: 'Backtest time range (e.g., 20240101-20241231)'
         required: true
-        default: '20230101-20241231'
+        default: '20250704-20251231'
       days:
         description: 'Days of data to download'
         required: true
-        default: '730'
+        default: '180'
       pairs:
         description: 'Trading pairs (comma separated)'
         required: true
@@ -45,7 +45,7 @@ jobs:
           path: user_data/data
           key: freqtrade-manual-${{ hashFiles('config/eightpm_backtest.json') }}-${{ github.event.inputs.timerange }}
           restore-keys: |
-            freqtrade-manual-2y-
+            freqtrade-manual-
 
       - name: Download data
         run: |
@@ -98,10 +98,10 @@ jobs:
           LOSSES=$(jq -r '.strategy_comparison[0].losses' "$RESULT")
 
           cat > detailed_report.md <<EOF
-          # 🎯 8PM High/Low Strategy v2.6 - 2年详细回测报告
+          # 🎯 8PM High/Low Strategy v2.6 - 详细回测报告
 
           ## ⚙️ Configuration
-          - **Time Range**: ${{ github.event.inputs.timerange }} (2年数据)
+          - **Time Range**: ${{ github.event.inputs.timerange }}
           - **Trading Pairs**: ${{ github.event.inputs.pairs }}
           - **Data Days**: ${{ github.event.inputs.days }}
           - **Timeframe**: 1 hour
@@ -141,19 +141,19 @@ jobs:
           - 🥈 **ADA**: 2.5x (历史最佳表现币种)
           - 🥉 **AVAX**: 1.5x (潜力币种适度配置)
 
-          ## 📈 2年回测优势
-          - **数据充分性**: 730天 = 17,520小时数据点
-          - **市场周期覆盖**: 包含牛市、熊市、震荡市
-          - **统计可靠性**: 大样本量降低随机性影响
-          - **长期稳定性**: 验证策略持续盈利能力
+          ## 📈 当前数据优势
+          - **最新市场**: 基于2025年最新市场数据
+          - **当前环境**: 反映当前市场环境和波动特征
+          - **充足样本**: 约4000+小时数据点
+          - **实时验证**: 验证策略在当前市场的有效性
 
-          ## 🎯 Strategy Validation (2年验证)
+          ## 🎯 Strategy Validation
           $(if [ $(echo "${WINRATE} >= 60" | bc -l) -eq 1 ]; then
-            echo "✅ **策略表现优异** - 2年胜率超过60%，长期稳定盈利"
+            echo "✅ **策略表现优异** - 胜率超过60%，当前市场表现稳定"
           elif [ $(echo "${WINRATE} >= 50" | bc -l) -eq 1 ]; then
-            echo "⚠️ **策略表现良好** - 2年胜率50-60%，具备盈利潜力"
+            echo "⚠️ **策略表现良好** - 胜率50-60%，具备盈利潜力"
           else
-            echo "❌ **策略需要优化** - 2年胜率低于50%，需要进一步调整"
+            echo "❌ **策略需要优化** - 胜率低于50%，需要进一步调整"
           fi)
 
           ## 📊 v2.6 核心改进
@@ -161,11 +161,11 @@ jobs:
           2. **优化出场**: 止损1.6%，止盈6.0%，盈亏比1:3.75
           3. **智能仓位**: ETH 2.0x，ADA 2.5x，AVAX 1.5x
           4. **时间管理**: ETH 60h，ADA 48h，AVAX 40h差异化
-          5. **2年验证**: 长期数据验证策略稳定性和可靠性
+          5. **当前验证**: 基于最新可用数据验证策略有效性
 
           ---
           *Generated on $(date) by GitHub Actions*
-          *Strategy: EightPMHighLowStrategy v2.6 - 2年精准优化版*
+          *Strategy: EightPMHighLowStrategy v2.6 - 精准优化版*
           EOF
 
           # Also create a summary for the workflow
