feat: 调整回测时间为最近2年 - 增强策略验证可靠性
🎯 回测时间优化:
- 优先时间范围: 2023-01-01 至 2025-12-31 (2年)
- 数据下载: 730天历史数据
- 备用机制: 2年1年6个月智能降级

📊 2年数据验证优势:
- 长期稳定性: 验证策略持续盈利能力
- 市场周期覆盖: 包含多种市场环境和波动
- 统计可靠性: 大样本量提供更可靠指标
- 实盘信心: 长期数据验证增强交易信心

🔧 GitHub Actions更新:
- 自动回测: 优先尝试2年数据范围
- 手动回测: 默认2年时间范围
- 报告优化: 突出2年数据验证优势
- 智能适配: 根据实际数据可用性调整

--- a/.github/workflows/manual-backtest.yml
+++ b/.github/workflows/manual-backtest.yml
@@ -6,11 +6,11 @@ on:
       timerange:
         description: 'Backtest time range (e.g., 20240101-20241231)'
         required: true
-        default: '20220101-20251231'
+        default: '20230101-20251231'
       days:
         description: 'Days of data to download'
         required: true
-        default: '1460'
+        default: '730'
       pairs:
         description: 'Trading pairs (comma separated)'
         required: true
@@ -83,10 +83,10 @@ jobs:
             
             echo "❌ 原始时间范围失败，尝试备用范围..."
             
-            # 备用时间范围
+            # 备用时间范围 (优先2年数据)
             FALLBACK_RANGES=(
-              "20240101-20251231"  # 2年
-              "20250101-20251231"  # 1年
+              "20230101-20251231"  # 2年 (优先)
+              "20240101-20251231"  # 1年
               "20250704-20251231"  # 6个月
             )
             
@@ -182,11 +182,11 @@ jobs:
           - 🥈 **ADA**: 2.5x (历史最佳表现币种)
           - 🥉 **AVAX**: 1.5x (潜力币种适度配置)
 
-          ## 📈 数据范围分析
-          - **请求范围**: ${{ github.event.inputs.timerange }}
-          - **实际使用**: ${ACTUAL_TIMERANGE:-${{ github.event.inputs.timerange }}}
-          - **数据天数**: ${{ github.event.inputs.days }}天
-          - **自动适配**: 根据实际数据可用性智能调整
+          ## 📈 2年数据验证优势
+          - **长期稳定性**: 2年数据验证策略持续盈利能力
+          - **市场周期覆盖**: 包含多种市场环境和波动周期
+          - **统计可靠性**: 大样本量提供更可靠的性能指标
+          - **实盘信心**: 长期数据验证增强实盘交易信心
 
           ## 🎯 Strategy Validation
           $(if [ $(echo "${WINRATE} >= 60" | bc -l) -eq 1 ]; then
